Downgrade from Java 24 to Java 17 and fix List.getFirst() compatibility